# gen-ai-one

./: .env.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  emulate_openai.ipynb  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ai_evaluation.yaml  pre-commit.yaml
src/: settings.py  utils.py
src/ml/: ai.py
src/pages/: 0_azure_chat.py  2_fastapi_azure_rag.py
tests/: test_chat.py  test_llm_endpoint.py
